--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,18 +1,31 @@
 <footer>
+  <br />
+
   <!-- license -->
-  <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"
-    ><img
-      alt="Creative Commons License"
-      style="border-width: 0"
-      src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a
-  ><br />This work by
-  <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName"
-    >Alper Çelik</span
-  >
-  is licensed under a
-  <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"
-    >Creative Commons Attribution 4.0 International License</a
-  >.
+  <div class="f:fade-40 f:14">
+    <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
+      <img
+        alt="Creative Commons License"
+        style="border-width: 0"
+        src="https://i.creativecommons.org/l/by/4.0/88x31.png"
+      />
+    </a>
+    This work by
+    <span
+      xmlns:cc="http://creativecommons.org/ns#"
+      property="cc:attributionName"
+      >Alper Çelik</span
+    >
+    is licensed under a
+    <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"
+      >Creative Commons Attribution 4.0 International License</a
+    >.
+  </div>
+  <br />
+  <div>
+    <a href="{{ .Site.BaseURL }}index.xml">rss feed <a/>
+  <div/>
+  <br />
 
   <!-- theme info  -->
   <div class="f:fade-60 f:12">
