add mastodon link and verification

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -24,8 +24,11 @@
   <br />
   <div>
     <a href="{{ .Site.BaseURL }}index.xml">rss feed <a/>
+    <br />
+    <a rel="me" href="https://mastodon.social/@Alper_Celik">My Mastadon</a>
   <div/>
   <br />
+
 
   <!-- theme info  -->
   <div class="f:fade-60 f:12">
