--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -25,7 +25,7 @@
   <div>
     <a href="{{ .Site.BaseURL }}index.xml">rss feed <a/>
     <br />
-    <a rel="me" href="https://mastodon.social/@Alper_Celik">My Mastadon</a>
+    <a rel="me" href="https://infosec.exchange/@Alper_Celik">My Mastadon</a>
   <div/>
   <br />
 
