better link style for light theme

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,6 +6,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script type="module" src="https://cdn.jsdelivr.net/gh/dpecos/mastodon-comments@6fe36e7e308412cc02f26ae1477987a75d32e58f/mastodon-comments.js"></script>
   <style>
+  a {
+    color: black;
+    text-decoration: underline;
+  }
   @media (prefers-color-scheme: dark) {
     mastodon-comments {
       --font-color: #999FAD;
