add cf analytics

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -63,4 +63,6 @@
     >
   </div>
 
+  <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "baf82a9a3d704f91a65c8d562e9e930d"}'></script><!-- End Cloudflare Web Analytics -->
+
 </footer>
