add teknofest sosyal verification

--- a/layouts/partials/head-extra.html
+++ b/layouts/partials/head-extra.html
@@ -4,3 +4,6 @@
   href="%s"
   title="%s"
 />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }} {{ end -}}
+
+<link rel="me" href="https://infosec.exchange/@Alper_Celik"/>
+<link rel="me" href="https://sosyal.teknofest.app/@teknofest_alper_celik"/>
